Updated app name

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>WE Write - UI copy writing assistant</title>
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <script>
+      (function() {
+        var meta = document.createElement('meta');
+        meta.name = 'theme-color';
+        meta.content = '#000000';
+        document.getElementsByTagName('head')[0].appendChild(meta);
+      })();
+    </script>
     <meta
       name="description"
       content="Web site created using create-react-app"
