--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>UI Text Assistant</title>
+    <title>WE Write - UI copy writing assistant</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
